Updated data cleaning

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -50,7 +50,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np  \n",
-    "import matplotlib.pyplot as plt  \n",
+    "import matplotlib.pyplot as plt \n",
+    "from sklearn.impute import SimpleImputer \n",
     "import seaborn as sns\n",
     "import sys\n",
     "import os\n",
@@ -59,7 +60,7 @@
     "notebook_dir = os.getcwd()\n",
     "src_path = os.path.join(notebook_dir, '../src')\n",
     "sys.path.append(src_path)\n",
-    "from data_cleaning import filter_columns\n"
+    "from data_cleaning import *\n"
    ]
   },
   {
@@ -1128,11 +1129,230 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling Missing Data Based on Percentage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Columns less than 10% null"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DMDEDUC2    4.308032\n",
+       "DMDMARTZ    4.371154\n",
+       "LBDTCSI     9.783809\n",
+       "PAD680      0.094682\n",
+       "INDFMMPC    8.205776\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_percentage[(null_percentage < 10) & (null_percentage > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fill_vals = {\n",
+    "    'DMDEDUC2': filtered_df['DMDEDUC2'].mode()[0],\n",
+    "    'DMDMARTZ': filtered_df['DMDMARTZ'].mode()[0],\n",
+    "    'LBDTCSI': filtered_df['LBDTCSI'].mean(),\n",
+    "    'PAD680': filtered_df['PAD680'].mode()[0],\n",
+    "    'INDFMMPC': filtered_df['INDFMMPC'].mean(),\n",
+    "}\n",
+    "\n",
+    "filtered_df = filtered_df.fillna(value=fill_vals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Columns more than 10% and less than 20% null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "INDFMPIR    13.113461\n",
+       "DIQ160      17.279470\n",
+       "DPQ010      12.908316\n",
+       "DPQ020      12.924097\n",
+       "DPQ030      12.955657\n",
+       "DPQ040      12.987218\n",
+       "DPQ050      13.002998\n",
+       "DPQ060      13.050339\n",
+       "DPQ070      13.081900\n",
+       "DPQ080      13.081900\n",
+       "DPQ090      13.113461\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_percentage[(null_percentage < 20) & (null_percentage > 10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Depression Screening columns values 7 'Refused' and 9 'Don't know' are considered as missing values\n",
+    "dpq_cols = ['DPQ010', 'DPQ020', 'DPQ030', 'DPQ040', 'DPQ050', 'DPQ060', 'DPQ070', 'DPQ080', 'DPQ090', 'DPQ100']\n",
+    "filtered_df.loc[:, dpq_cols] = filtered_df[dpq_cols].replace({7: np.nan, 9: np.nan})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Impute DPQ missing values with mode\n",
+    "dpq_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "filtered_df[dpq_cols] = dpq_imputer.fit_transform(filtered_df[dpq_cols])\n",
+    "\n",
+    "# Impute missing values with mean for 'INDFMPIR' (ensure it's flattened after transform)\n",
+    "mean_imputer = SimpleImputer(strategy='mean')\n",
+    "filtered_df['INDFMPIR'] = mean_imputer.fit_transform(filtered_df[['INDFMPIR']])\n",
+    "\n",
+    "# Impute missing values with mode for 'DIQ160'\n",
+    "mode_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "filtered_df['DIQ160'] = mode_imputer.fit_transform(filtered_df[['DIQ160']]).ravel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Columns more than 20% null and less than 40% null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PAD790U    20.609121\n",
+       "ALQ130     35.947609\n",
+       "ALQ142     35.774026\n",
+       "DPQ100     34.243333\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_percentage[(null_percentage < 40) & (null_percentage > 20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace 777, 999, 77, and 99 with NaN for ALQ130 and ALQ142\n",
+    "filtered_df.loc[:, 'ALQ130'] = filtered_df['ALQ130'].replace([777, 999], np.nan)\n",
+    "filtered_df.loc[:, 'ALQ142'] = filtered_df['ALQ142'].replace([77, 99], np.nan)\n",
+    "\n",
+    "# Median Imputation for ALQ130 \n",
+    "mean_imputer = SimpleImputer(strategy='median')\n",
+    "filtered_df.loc[:, 'ALQ130'] = mean_imputer.fit_transform(filtered_df[['ALQ130']])\n",
+    "\n",
+    "# Mode imputation for ALQ142, PAD790U and DPQ100\n",
+    "mode_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "filtered_df.loc[:, 'ALQ142'] = mode_imputer.fit_transform(filtered_df[['ALQ142']])\n",
+    "filtered_df.loc[:, 'PAD790U'] = mode_imputer.fit_transform(filtered_df[['PAD790U']])\n",
+    "filtered_df.loc[:, 'DPQ100'] = mode_imputer.fit_transform(filtered_df[['DPQ100']])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Columns more than 40% null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DID040    86.507811\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_percentage[(null_percentage > 40)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DID040    86.507811\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_percentage = filtered_df.isnull().mean() * 100\n",
+    "null_percentage[null_percentage > 0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1143,23 +1363,327 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map Categorical Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_cat_vars(filtered_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lizbe\\AppData\\Local\\Temp\\ipykernel_14052\\1486129318.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df.drop_duplicates(inplace=True)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEQN</th>\n",
+       "      <th>RIDAGEYR</th>\n",
+       "      <th>RIDRETH3</th>\n",
+       "      <th>DMDBORN4</th>\n",
+       "      <th>DMDEDUC2</th>\n",
+       "      <th>DMDMARTZ</th>\n",
+       "      <th>DMDHHSIZ</th>\n",
+       "      <th>INDFMPIR</th>\n",
+       "      <th>LBDTCSI</th>\n",
+       "      <th>DIQ010</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DPQ030</th>\n",
+       "      <th>DPQ040</th>\n",
+       "      <th>DPQ050</th>\n",
+       "      <th>DPQ060</th>\n",
+       "      <th>DPQ070</th>\n",
+       "      <th>DPQ080</th>\n",
+       "      <th>DPQ090</th>\n",
+       "      <th>DPQ100</th>\n",
+       "      <th>SMQ040</th>\n",
+       "      <th>SMD641</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6.337000e+03</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "      <td>6337.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>136348.738362</td>\n",
+       "      <td>52.325548</td>\n",
+       "      <td>3.309768</td>\n",
+       "      <td>1.201673</td>\n",
+       "      <td>3.889380</td>\n",
+       "      <td>1.647625</td>\n",
+       "      <td>2.624586</td>\n",
+       "      <td>2.893249e+00</td>\n",
+       "      <td>4.835153</td>\n",
+       "      <td>1.899006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.681711</td>\n",
+       "      <td>0.738046</td>\n",
+       "      <td>0.434433</td>\n",
+       "      <td>0.351270</td>\n",
+       "      <td>0.339593</td>\n",
+       "      <td>0.172479</td>\n",
+       "      <td>0.064226</td>\n",
+       "      <td>0.306454</td>\n",
+       "      <td>0.929777</td>\n",
+       "      <td>0.359950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3439.132476</td>\n",
+       "      <td>18.280888</td>\n",
+       "      <td>1.400246</td>\n",
+       "      <td>0.401281</td>\n",
+       "      <td>1.143952</td>\n",
+       "      <td>1.233358</td>\n",
+       "      <td>1.485297</td>\n",
+       "      <td>1.547385e+00</td>\n",
+       "      <td>1.048063</td>\n",
+       "      <td>0.412357</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.941218</td>\n",
+       "      <td>0.906900</td>\n",
+       "      <td>0.799010</td>\n",
+       "      <td>0.716428</td>\n",
+       "      <td>0.709913</td>\n",
+       "      <td>0.534551</td>\n",
+       "      <td>0.323447</td>\n",
+       "      <td>0.589907</td>\n",
+       "      <td>1.278448</td>\n",
+       "      <td>2.538092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>130378.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.397605e-79</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>133337.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.580000e+00</td>\n",
+       "      <td>4.160000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>136397.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.893249e+00</td>\n",
+       "      <td>4.835153</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>139310.000000</td>\n",
+       "      <td>67.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.490000e+00</td>\n",
+       "      <td>5.400000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>142310.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>5.000000e+00</td>\n",
+       "      <td>11.330000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                SEQN     RIDAGEYR     RIDRETH3     DMDBORN4     DMDEDUC2  \\\n",
+       "count    6337.000000  6337.000000  6337.000000  6337.000000  6337.000000   \n",
+       "mean   136348.738362    52.325548     3.309768     1.201673     3.889380   \n",
+       "std      3439.132476    18.280888     1.400246     0.401281     1.143952   \n",
+       "min    130378.000000    18.000000     1.000000     1.000000     1.000000   \n",
+       "25%    133337.000000    37.000000     3.000000     1.000000     3.000000   \n",
+       "50%    136397.000000    56.000000     3.000000     1.000000     4.000000   \n",
+       "75%    139310.000000    67.000000     3.000000     1.000000     5.000000   \n",
+       "max    142310.000000    80.000000     7.000000     2.000000     9.000000   \n",
+       "\n",
+       "          DMDMARTZ     DMDHHSIZ      INDFMPIR      LBDTCSI       DIQ010  ...  \\\n",
+       "count  6337.000000  6337.000000  6.337000e+03  6337.000000  6337.000000  ...   \n",
+       "mean      1.647625     2.624586  2.893249e+00     4.835153     1.899006  ...   \n",
+       "std       1.233358     1.485297  1.547385e+00     1.048063     0.412357  ...   \n",
+       "min       1.000000     1.000000  5.397605e-79     1.600000     1.000000  ...   \n",
+       "25%       1.000000     2.000000  1.580000e+00     4.160000     2.000000  ...   \n",
+       "50%       1.000000     2.000000  2.893249e+00     4.835153     2.000000  ...   \n",
+       "75%       2.000000     4.000000  4.490000e+00     5.400000     2.000000  ...   \n",
+       "max      77.000000     7.000000  5.000000e+00    11.330000     9.000000  ...   \n",
+       "\n",
+       "            DPQ030       DPQ040       DPQ050       DPQ060       DPQ070  \\\n",
+       "count  6337.000000  6337.000000  6337.000000  6337.000000  6337.000000   \n",
+       "mean      0.681711     0.738046     0.434433     0.351270     0.339593   \n",
+       "std       0.941218     0.906900     0.799010     0.716428     0.709913   \n",
+       "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "50%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "75%       1.000000     1.000000     1.000000     0.000000     0.000000   \n",
+       "max       3.000000     3.000000     3.000000     3.000000     3.000000   \n",
+       "\n",
+       "            DPQ080       DPQ090       DPQ100       SMQ040       SMD641  \n",
+       "count  6337.000000  6337.000000  6337.000000  6337.000000  6337.000000  \n",
+       "mean      0.172479     0.064226     0.306454     0.929777     0.359950  \n",
+       "std       0.534551     0.323447     0.589907     1.278448     2.538092  \n",
+       "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+       "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+       "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+       "75%       0.000000     0.000000     1.000000     3.000000     0.000000  \n",
+       "max       3.000000     3.000000     3.000000     3.000000    30.000000  \n",
+       "\n",
+       "[8 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_df.drop_duplicates(inplace=True)"
+    "filtered_df.describe()"
    ]
   },
   {
