--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -1582,13 +1582,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1684,7 +1677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_list = list(X.columns)a"
+    "feature_list = list(X.columns)"
    ]
   },
   {
@@ -1734,7 +1727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visulizations"
+    "# Visualizations"
    ]
   },
   {
@@ -1777,7 +1770,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1791,7 +1784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
