--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -45,10 +45,14 @@
     "import seaborn as sns\n",
     "import sys\n",
     "import os\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn import metrics\n",
+    "import joblib\n",
+    "\n",
     "\n",
     "# Import functions\n",
     "notebook_dir = os.getcwd()\n",
@@ -2028,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
