--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
     {
      "data": {
       "text/plain": [
-       "['../models/nhanes_model.pkl']"
+       "['../api/models/nhanes_model.pkl']"
       ]
      },
      "execution_count": 26,
@@ -2079,7 +2079,7 @@
    ],
    "source": [
     "import joblib\n",
-    "joblib.dump(model, '../models/nhanes_model.pkl')"
+    "joblib.dump(model, '../api/models/nhanes_model.pkl')"
    ]
   },
   {
